phone screen adjustments

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -365,5 +365,12 @@ display: none;
 #searchbar-home{
 
   display: none;
+}}
+
+
+@media only screen and (max-width: 500px) {
+
+#home-title{
+  display: none;
 }
 }
