--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -15,6 +15,7 @@
 <a id="editprofilebutton" href="/posts/<%=user._id%>/editprofile"><button>Edit profile</button></a>
 <!-- <p>You have <span id="length"></span> posts</p> -->
 <p id="fullnameprofile"><%=user.fullname%></p>
+<p id="userbio"><%=user.bio%></p>
 
 
 </div>
