--- a/views/editprofile.ejs
+++ b/views/editprofile.ejs
@@ -14,10 +14,17 @@
 
 <form action="/posts/editprofile/<%=user._id%>?_method=PUT" method="POST">
 
-    <input type="text" name="username" placeholder="Change username" id="captionchange" value="<%=user.username%>" readonly>
+    <!-- <input type="text" name="username" placeholder="Change username" id="captionchange" value="<%=user.username%>" readonly> -->
+    Profile picture
     <input type="text" name="profileimage" placeholder="Change profile picture" id="captionchange" value="<%=user.profileimage%>">
+   <br>
+   Full name
     <input type="text" name="fullname" placeholder="Change your name" id="captionchange" value="<%=user.fullname%>">
-    <input type="submit" value="update">
+    <br>
+    Bio
+    <input type="text" name="bio" placeholder="Edit Bio" id="captionchange" value="<%=user.bio%>">
+<br>
+    <input type="submit" value="update" id="updateprofilebtn">
 
 
 </form>
