captions in show page

--- a/views/showpost.ejs
+++ b/views/showpost.ejs
@@ -55,6 +55,7 @@
 
         <p class="caption white-bg">
           <span class="user-home"><%=post.user%> </span>
+           <span class="user-home"><%=post.caption%> </span>
 
 
 <%- include('footer') -%>
